--- a/LimitCalc/static/index.html
+++ b/LimitCalc/static/index.html
@@ -1,10 +1,29 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Ribų skaičiuotuvas</title>
-    </head>
-    <body>
-        Hello, World!
-    </body>
+<!DOCTYPE HTML>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<title>Limitless limit calc (Limited edition)</title>
+		<link rel="stylesheet" type="text/css" href="style.css">
+	</head>
+	</body>
+		<div id="input">
+			<form method="get">
+				<label>
+					lim 
+				</label>
+				<input type="text" name="function" required>
+				<br>
+				<label>
+					x → 
+				</label>
+				<input type="text" name="xGoesTo" required>
+				<input type="submit" name="findLimit" value="="> 
+			</form>
+		</div>
+
+		<div id="output">
+			ATS
+		</div>
+
+	</body>
 </html>
