--- a/LimitCalc/static/index.html
+++ b/LimitCalc/static/index.html
@@ -8,20 +8,19 @@
 	</body>
 		<div id="input">
 			<form method="get">
-				<label>
+				<label id="lim">
 					lim 
 				</label>
-				<input type="text" name="function" required>
+				<input id="function" type="text" name="function" required>
+				<input id="findLimit" type="submit" name="findLimit" value="="> 
 				<br>
-				<label>
-					x → 
+				<label id="xGoes">
+					x→
 				</label>
-				<input type="text" name="xGoesTo" required>
-				<input type="submit" name="findLimit" value="="> 
+				<input id="xGoesTo" type="text" name="xGoesTo" required>
+				
 			</form>
-		</div>
-
-		<div id="output">
+		</div><div id="output">
 			ATS
 		</div>
 
