--- a/LimitCalc/static/index.html
+++ b/LimitCalc/static/index.html
@@ -12,12 +12,12 @@
 					lim 
 				</label>
 				<input id="function" type="text" name="function" required>
-				<input id="findLimit" type="submit" name="findLimit" value="=" onclick="calculate()"> 
+				<input id="calcButton" type="submit" name="findLimit" value="=" onclick="calculate()"> 
 				<br>
-				<label id="xGoes">
+				<label id="xToLabel">
 					x→
 				</label>
-				<input id="xGoesTo" type="text" name="xGoesTo" required>
+				<input id="xTo" type="text" name="xGoesTo" required>
 				
 			</form>
 		</div><div id="output">
