--- a/LimitCalc/static/index.html
+++ b/LimitCalc/static/index.html
@@ -25,10 +25,11 @@
 							<input id="calcButton" type="submit" name="findLimit" value="="> 
 						</div>
 					</form>
-				</div><div id="output"/>
+				</div>
+				<div id="output"/>
 			</div>
 		</div>
-		<div id="error"/>
+		<div id="error">sadasd</div>
 		<script src="script.js"></script>
 	</body>
 </html>
