--- a/LimitCalc/static/index.html
+++ b/LimitCalc/static/index.html
@@ -8,10 +8,17 @@
 	<body>
 		<div id="centerBlock">
 			<div id="header">
-
+					<img src="http://www.userlogos.org/files/logos/Rog/wolframalpha.com_02.png" title="Totally Not Wolfram" alt="">
+					<span id="span1">
+						Riboja.me 
+					</span><span id="span2">
+						Beta
+					</span><span id="span3">
+						Ribų skaičiavimo <br>variklis
+					</span>
 			</div>
 			<div id="message">
-
+					Įveskite funciją ir tašką, kuriame norite suskaičiuoti ribą:
 			</div>
 			<div id="content" class="if">
 				<div id="input">
