misc ui improvements

--- a/LimitCalc/static/index.html
+++ b/LimitCalc/static/index.html
@@ -28,8 +28,14 @@
 					<input id="xTo" class="fields" type="text" name="xGoesTo" required>
 					<input id="calcButton" class="fields" type="submit" name="findLimit" value="go"> 
 				</form>
+				<!-- pretty ridiculous, right? -->
+				<div id="padding"></div>
 				<div id="output"></div>
 			</div>
+		</div>
+		<div id="footer">
+			<p>Autoriai: Domantas Jadenkus, Vytautas Strimaitis, Margiris Strakšys, Mantas Petrikas.</p>
+			<p>Kodas Github'e (?).</p>
 		</div>
 		<!-- <div id="error"></div> -->
 		<script src="script.js"></script>
