--- a/LimitCalc/static/index.html
+++ b/LimitCalc/static/index.html
@@ -35,7 +35,10 @@
 		</div>
 		<div id="footer">
 			<p>Autoriai: Domantas Jadenkus, Vytautas Strimaitis, Margiris Strakšys, Mantas Petrikas.</p>
-			<p>Kodas Github'e (?).</p>
+			<p>
+				<a href="https://github.com/vstrimaitis/limit_calculator" target="_blank">Sistemos aprašymas (PDF).</a>
+				<a href="https://github.com/vstrimaitis/limit_calculator" target="_blank">Kodas Github'e</a>
+			</p>
 		</div>
 		<!-- <div id="error"></div> -->
 		<script src="script.js"></script>
