--- a/LimitCalc/static/index.html
+++ b/LimitCalc/static/index.html
@@ -36,7 +36,7 @@
 		<div id="footer">
 			<p>Autoriai: Domantas Jadenkus, Vytautas Strimaitis, Margiris Strakšys, Mantas Petrikas.</p>
 			<p>
-				<a href="https://github.com/vstrimaitis/limit_calculator" target="_blank">Sistemos aprašymas (PDF).</a>
+				<a href="ribojame.pdf" target="_blank">Sistemos aprašymas (PDF).</a>
 				<a href="https://github.com/vstrimaitis/limit_calculator" target="_blank">Kodas Github'e</a>
 			</p>
 		</div>
